@@ -1,5 +1,9 @@
 2016-06-28  Even Rouault <even.rouault@spatialys.com>
 
+    * Fix all warnings about unused variables raised by GCC 4.8
+
+2016-06-28  Even Rouault <even.rouault@spatialys.com>
+
     * Actually fix build against proj >= 4.8 (assuming that projects.h is installed,
     which is the case in Ubuntu 14.04 for example) (OGDI #71)
 
